--- a/packages/anthill/src/Link.module.css
+++ b/packages/anthill/src/Link.module.css
@@ -1,10 +1,12 @@
 .link {
   cursor: pointer;
   display: flex;
+  outline-color: transparent;
   text-decoration-line: underline;
   text-decoration-color: var(--color-accent);
   transition:
     color 0.2s,
+    outline-color 0.2s,
     text-decoration-color 0.2s;
 
   @media screen and (hover: hover) {
@@ -17,7 +19,7 @@
   &:focus-visible {
     border-radius: 2px;
     outline-offset: 2px;
-    outline: 2px solid color-mix(in oklch, var(--color-accent), transparent 40%);
+    outline: 2px solid var(--color-accent);
     text-decoration: unset;
   }
 }
