--- a/apps/docs/src/app/widths/page.module.css
+++ b/apps/docs/src/app/widths/page.module.css
@@ -1,26 +1,42 @@
 .container {
-  border-radius: 1rlh;
   display: grid;
   grid-template-columns: var(--width-medium) var(--width-narrow);
   overflow: hidden;
   width: var(--width-wide);
 
   > div {
+    border-radius: 1rlh;
+    border: 2px solid currentColor;
     display: grid;
     padding: 5rlh 1rlh;
     place-content: center;
 
     &:nth-child(1) {
-      background: light-dark(var(--color-red-t5), var(--color-teal-s5));
+      background: linear-gradient(
+        -45deg,
+        light-dark(var(--color-teal-t2), var(--color-teal-s2)),
+        light-dark(var(--color-teal-t5), var(--color-teal-s5))
+      );
+      border-color: light-dark(var(--color-teal-00), var(--color-teal-00));
       grid-column: 1 / -1;
     }
 
     &:nth-child(2) {
-      background: light-dark(var(--color-green-t5), var(--color-blue-s5));
+      background: linear-gradient(
+        -45deg,
+        light-dark(var(--color-green-t2), var(--color-green-s2)),
+        light-dark(var(--color-green-t5), var(--color-green-s5))
+      );
+      border-color: light-dark(var(--color-green-00), var(--color-green-00));
     }
 
     &:nth-child(3) {
-      background: light-dark(var(--color-blue-t5), var(--color-magenta-s5));
+      background: linear-gradient(
+        -45deg,
+        light-dark(var(--color-blue-t2), var(--color-blue-s2)),
+        light-dark(var(--color-blue-t5), var(--color-blue-s5))
+      );
+      border-color: light-dark(var(--color-blue-00), var(--color-blue-00));
     }
   }
 }
