--- a/packages/anthill/src/CardContent.module.css
+++ b/packages/anthill/src/CardContent.module.css
@@ -1,4 +1,7 @@
 .container {
+  display: grid;
+  grid-auto-columns: minmax(0, auto);
+  grid-auto-rows: minmax(0, auto);
   max-height: 100%;
   overflow-y: auto;
   padding: 1rlh;
