--- a/packages/anthill/src/Header.module.css
+++ b/packages/anthill/src/Header.module.css
@@ -2,6 +2,7 @@
   &.withActions {
     column-gap: 0.5rlh;
     display: grid;
+    grid-auto-rows: minmax(0, auto);
     grid-template-columns: auto max-content;
     justify-content: space-between;
   }
