fix background color of <ActionSet>

--- a/packages/anthill/src/ActionSet.module.css
+++ b/packages/anthill/src/ActionSet.module.css
@@ -1,5 +1,5 @@
 .actionList {
-  background: white;
+  background: light-dark(var(--color-gray-t9), var(--color-gray-s9));
   border-radius: 0.25rlh;
   border: 1px solid #eee;
   display: grid;
