fix hover for actions with custom color

--- a/packages/anthill/src/Action.module.css
+++ b/packages/anthill/src/Action.module.css
@@ -1,5 +1,7 @@
 .action {
+  --color: currentColor;
   align-items: center;
+  color: var(--color);
   column-gap: 0.5ch;
   cursor: pointer;
   display: grid;
