make links inline

--- a/packages/anthill/src/Link.module.css
+++ b/packages/anthill/src/Link.module.css
@@ -1,6 +1,6 @@
 .link {
   cursor: pointer;
-  display: flex;
+  display: inline-flex;
   outline-color: transparent;
   text-decoration-line: underline;
   text-decoration-color: var(--color-accent);
