--- a/packages/anthill/src/PlainText.module.css
+++ b/packages/anthill/src/PlainText.module.css
@@ -1,7 +1,11 @@
-.truncated {
-  display: inline-block;
-  max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.container {
+  display: inline;
+
+  &.truncated {
+    display: inline-block;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 }
