--- a/packages/anthill/src/TabSet.module.css
+++ b/packages/anthill/src/TabSet.module.css
@@ -9,6 +9,7 @@
     transition:
       border-bottom-color 0.2s,
       color 0.2s;
+    user-select: none;
 
     & > span {
       outline-color: transparent;
