--- a/packages/anthill/src/Card.module.css
+++ b/packages/anthill/src/Card.module.css
@@ -2,7 +2,7 @@
   --icon-size: calc(var(--config-title-line-height) * 1.5);
   display: grid;
   grid-auto-columns: minmax(0, auto);
-  grid-auto-rows: minmax(0, auto);
+  grid-auto-rows: minmax(0, max-content);
   position: relative;
 
   .icon {
