--- a/packages/anthill/src/Stack.module.css
+++ b/packages/anthill/src/Stack.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-auto-columns: minmax(0, auto);
-  grid-auto-rows: minmax(0, auto);
+  grid-auto-rows: minmax(0, max-content);
   row-gap: var(--context-spacing);
 
   &.center {
