remove overflow hidden from <TabBlock> when using seamless

--- a/packages/anthill/src/TabBlock.module.css
+++ b/packages/anthill/src/TabBlock.module.css
@@ -47,6 +47,7 @@
   &.seamless {
     background: transparent;
     border: none;
+    overflow: visible;
 
     .content {
       padding: var(--context-spacing) 0;
