limit size of <CodeBlock>

--- a/packages/anthill/src/CodeBlock.module.css
+++ b/packages/anthill/src/CodeBlock.module.css
@@ -13,6 +13,8 @@
 
   .code {
     font: var(--font-small-monospace);
+    max-height: calc(20lh + var(--context-spacing) * 2);
+    overflow: auto;
     padding: var(--context-spacing);
     tab-size: 2;
     white-space: pre-wrap;
