--- a/packages/anthill/src/CardContent.module.css
+++ b/packages/anthill/src/CardContent.module.css
@@ -3,7 +3,8 @@
   grid-auto-columns: minmax(0, auto);
   grid-auto-rows: minmax(0, max-content);
   max-height: 100%;
-  overflow-y: auto;
+  max-width: 100%;
+  overflow: auto;
   padding: var(--context-spacing);
 
   &.flush {
